k8s-configs/ping-cloud/base/pingcommon/cloud-generic/pingcloud-radsecproxy/deployment.yaml
#
# This defines the pingcloud-radsecproxy deployment.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingcloud-radsecproxy
  labels:
    role: pingcloud-radsecproxy
spec:
  selector:
    matchLabels:
      role: pingcloud-radsecproxy
  template:
    metadata:
      name: pingcloud-radsecproxy
      labels:
        role: pingcloud-radsecproxy
    spec:
      serviceAccount: ping-serviceaccount
      containers:
      - name: pingcloud-radsecproxy
        image: 705370621539.dkr.ecr.us-west-2.amazonaws.com/michaelgazda/radsecproxy:v1.0.0-gazda-test
        imagePullPolicy: Always
        volumeMounts:
          - name: acme-tls-cert
            mountPath: /usr/local/secrets/certs
            readOnly: true
        resources:
          limits:
            memory: "500Mi"
            cpu: "400m"
          requests:
            memory: "200Mi"
            cpu: "200m"
#        readinessProbe:
#          httpGet:
#            path: /
#            port: 2083
#          initialDelaySeconds: 10
#          periodSeconds: 10
#          failureThreshold: 3
#          successThreshold: 1
#          timeoutSeconds: 3          
#        livenessProbe:
#          httpGet:
#            path: /
#            port: 2083
#          initialDelaySeconds: 10
#          periodSeconds: 10
#          failureThreshold: 3
#          successThreshold: 1
#          timeoutSeconds: 3
        ports:
        - containerPort: 2083
      volumes:
        - name: acme-tls-cert
          secret:
            secretName: acme-tls-cert
            optional: true
            defaultMode: 0400
