k8s-configs/ping-cloud/base/pingcommon/cloud-generic/pingcloud-radsecproxy/service.yaml
#
# This service exposes the pingcloud-radsecproxy port to the cluster.
#
apiVersion: v1
kind: Service
metadata:
  name: radsecproxy
  labels:
    role: radsecproxy
spec:
  ports:
  - port: 2083
    targetPort: 2083
  selector:
    role: pingcloud-radsecproxy
